fixing whitespace (added pos-relative to body)

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@
 :root {
   font-family: "inter", sans-serif;
 }
+
+body {
+  position: relative,
+}
